--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "axios": "^1.7.1",
+    "jwt-decode": "^4.0.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
