--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "aos": "^2.3.4",
     "axios": "^1.7.1",
     "jwt-decode": "^4.0.0",
