--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.7.1",
     "jwt-decode": "^4.0.0",
     "nuxt": "^3.11.2",
+    "v-mask": "^2.3.0",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vue-the-mask": "^0.11.1"
   }
 }
