--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@formkit/auto-animate": "^0.8.2",
     "aos": "^2.3.4",
     "axios": "^1.7.1",
+    "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "nuxt": "^3.11.2",
     "v-mask": "^2.3.0",
