--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -16,8 +16,9 @@
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "nuxt": "^3.11.2",
-    "v-mask": "^2.3.0",
+    "swiper": "^11.1.3",
     "vue": "^3.4.27",
+    "vue-imask": "^7.6.1",
     "vue-router": "^4.3.2",
     "vue-the-mask": "^0.11.1"
   }
