--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "@hebilicious/vue-query-nuxt": "^0.3.0",
     "@nuxt/image": "^1.7.0",
+    "@tanstack/vue-query": "^5.45.0",
     "axios": "^1.7.1",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
