--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@hebilicious/vue-query-nuxt": "^0.3.0",
     "@nuxt/image": "^1.7.0",
-    "@tanstack/vue-query": "^5.45.0",
     "axios": "^1.7.1",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "nuxt": "^3.11.2",
+    "nuxt-delay-hydration": "^1.3.3",
     "swiper": "^11.1.3",
     "typed.js": "^2.1.0",
     "vue": "^3.4.27",
     "vue-imask": "^7.6.1",
     "vue-router": "^4.3.2",
     "vue-the-mask": "^0.11.1",
+    "vue3-lazyload": "^0.3.8",
     "yandex-maps": "^0.0.1"
   }
 }
