--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash.debounce": "^4.0.8",
     "nuxt": "^3.11.2",
     "nuxt-delay-hydration": "^1.3.3",
+    "nuxt-lazy-hydrate": "^1.0.0",
     "swiper": "^11.1.3",
     "typed.js": "^2.1.0",
     "vue": "^3.4.27",
