--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "vue-the-mask": "^0.11.1",
     "vue3-lazyload": "^0.3.8",
     "yandex-maps": "^0.0.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/device": "^3.1.1"
   }
 }
