--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@formkit/auto-animate": "^0.8.2",
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/sitemap": "^5.3.2",
-    "axios": "^1.7.1",
+    "axios": "^1.7.2",
+    "axios-cache-interceptor": "^1.5.3",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
